# kxCraft

./: .gitignore  3Dutils.cpp  3Dutils.hpp  BMP.cpp  BMP.h  BMP.hpp  Block.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  HUD.cpp  HUD.hpp  Item.hpp  Player.cpp  Player.h  Player.hpp  README.md  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.h  Texture.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp  main.cpp
res/: options.txt
res/saves/default/: 0x0
res/shader/: default.fs  default.gs  default.vs  terrain.fs  terrain.gs  terrain.vs
windows/lib/: LibNoise64.lib
